# garden-solutions

./: .gitignore  Caddyfile  PLATFORM_GUIDE.md  Savage_4_Solutions_T_A_Garden_Solutions_Contact.xlsx  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  products_export_1.csv
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260130_1200_initial_schema_users_audit.py  20260130_1400_sprint1_core_entities.py  20260130_1500_rename_sales_agent_to_created_by.py  20260131_1000_add_client_address.py  20260131_1600_add_sales_agents_delivery_teams.py  20260201_1000_add_stores_order_source.py  20260201_1200_add_store_contact_sales_agent_phone.py  20260201_1300_add_product_image_url.py  20260202_1000_add_manufacturing_inventory.py  20260203_143827_add_delivery_paused.py  20260203_1600_add_factory_teams.py  20260310_1000_add_shopify_integration_tables.py  4ce431613629_add_price_tier_fields_and_store_fk.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  security.py
apps/api/app/models/: __init__.py  audit_log.py  client.py  delivery_team.py  delivery_team_member.py  factory_team.py  factory_team_member.py  inventory.py  manufacturing_day.py  order.py  order_item.py  price_tier.py  product.py  sales_agent.py  shopify.py  sku.py  (+2 more)
apps/api/scripts/: _seed_helpers.py  check_integrity.py  import_seed_catalog.py  seed_admin.py  seed_full_demo.py  seed_live_demo.py  smoke_test.py  verify_price_tiers.py
(+170 files in other folders)
